[project]
name = "blog-generation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "blockbuster>=1.5.26",
    "fastapi>=0.124.0",
    "jsonschema-rs==0.28.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.80",
    "langchain-groq>=0.3.8",
    "langgraph>=0.3.34",
    "langgraph-cli[inmem]>=0.2.7",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
